// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KeyboardShortcut allows to customize how modifiers are translated 1`] = `
<div>
  <span
    class="reactist_keyboard_shortcut"
  >
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        [ctrl]
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        [alt]
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        [shift]
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        E
      </kbd>
    </kbd>
  </span>
  <span
    class="reactist_keyboard_shortcut reactist_keyboard_shortcut--macos"
  >
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        ⌃
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        ⌥
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        ⇧
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        E
      </kbd>
    </kbd>
  </span>
</div>
`;

exports[`KeyboardShortcut only capitalizes a non-modifier part if the overall shortcut has modifiers 1`] = `
<div>
  <span
    class="reactist_keyboard_shortcut"
  >
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        e
      </kbd>
    </kbd>
    , 
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        Alt
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        E
      </kbd>
    </kbd>
  </span>
  <span
    class="reactist_keyboard_shortcut reactist_keyboard_shortcut--macos"
  >
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        e
      </kbd>
    </kbd>
    , 
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        ⌥
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        E
      </kbd>
    </kbd>
  </span>
</div>
`;

exports[`KeyboardShortcut recognizes mod/cmd as a modifier that behaves differently in macOS and outside macOS 1`] = `
<div>
  <span
    class="reactist_keyboard_shortcut"
  >
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        Ctrl
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        K
      </kbd>
    </kbd>
    , 
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        Ctrl
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        J
      </kbd>
    </kbd>
  </span>
  <span
    class="reactist_keyboard_shortcut reactist_keyboard_shortcut--macos"
  >
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        ⌘
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        K
      </kbd>
    </kbd>
    , 
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        ⌘
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        J
      </kbd>
    </kbd>
  </span>
</div>
`;

exports[`KeyboardShortcut supports passing various shortcuts, which it will separate with commas 1`] = `
<div>
  <span
    class="reactist_keyboard_shortcut"
  >
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        p1
      </kbd>
    </kbd>
    , 
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        p2
      </kbd>
    </kbd>
  </span>
  <span
    class="reactist_keyboard_shortcut reactist_keyboard_shortcut--macos"
  >
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        p1
      </kbd>
    </kbd>
    , 
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        p2
      </kbd>
    </kbd>
  </span>
</div>
`;

exports[`KeyboardShortcut works as expected 1`] = `
<div>
  <span
    class="reactist_keyboard_shortcut"
  >
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        Ctrl
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        Alt
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        Shift
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        E
      </kbd>
    </kbd>
  </span>
  <span
    class="reactist_keyboard_shortcut reactist_keyboard_shortcut--macos"
  >
    <kbd
      class="reactist_keyboard_shortcut__group"
    >
      <kbd
        class="reactist_keyboard_shortcut__plus"
      />
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        ⌃
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        ⌥
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        ⇧
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__plus"
      >
        +
      </kbd>
      <kbd
        class="reactist_keyboard_shortcut__key"
      >
        E
      </kbd>
    </kbd>
  </span>
</div>
`;
